--- a/assets/pages/MonthlyPlan.html
+++ b/assets/pages/MonthlyPlan.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
+      <div class="row d-flex justify-content-center">
         <div class="col-12 col-md-4 p-0">
           <div class="home_bg px-4 pt-5">
             <ul
@@ -29,7 +29,7 @@
             >
               <li class="nav-item" role="presentation">
                 <button
-                  class="nav-link active rounded-pill bg-blue-color"
+                  class="nav-link active rounded-pill tabs-bg"
                   id="pills-home-tab"
                   data-bs-toggle="pill"
                   data-bs-target="#pills-home"
@@ -63,10 +63,18 @@
                 role="tabpanel"
                 aria-labelledby="pills-home-tab"
               >
-                <div class="card p-4 shadow rounded-pill">
-                  <h6 class="fw-bold ps-3">FREE</h6>
-                  <hr class="m-0" />
-                  <div class="d-flex">
+                <div class="card p-4 shadow plan-card-border">
+                  <h6 class="free-text">FREE</h6>
+                  <div class="line position-relative">
+                    <div class="small-circle position-absolute bg-white shadow">
+                      <img
+                        src="/assets/images/blue-small-circle.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="d-flex gap-2 my-2">
                     <div class="white-small-circle shadow">
                       <img
                         src="/assets/images/tick.svg"
@@ -75,9 +83,95 @@
                       />
                     </div>
                     <div>
-                      <p>Limited links</p>
+                      <p class="light-color m-0">Limited links</p>
                     </div>
                   </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Pree selected backgrounds</p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 mt-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Pree selected button colors</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="card p-4 my-3 shadow plan-card-border">
+                  <h6 class="free-text">PROFESSIONAL</h6>
+                  <div class="line position-relative">
+                    <div class="small-circle position-absolute bg-white shadow">
+                      <img
+                        src="/assets/images/sky-blue-small-circle.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">$4.99 per moth</p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">
+                        Profile customization & control
+                      </p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 mt-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Unlimited links</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="pb-5">
+                  <button
+                    class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
+                    type="button"
+                  >
+                    Pick the plan
+                  </button>
                 </div>
               </div>
               <div
@@ -86,7 +180,116 @@
                 role="tabpanel"
                 aria-labelledby="pills-profile-tab"
               >
-                ...
+                <div class="card p-4 shadow plan-card-border">
+                  <h6 class="free-text">FREE</h6>
+                  <div class="line position-relative">
+                    <div class="small-circle position-absolute bg-white shadow">
+                      <img
+                        src="/assets/images/blue-small-circle.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Limited links</p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Pree selected backgrounds</p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 mt-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Pree selected button colors</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="card p-4 my-3 shadow plan-card-border">
+                  <h6 class="free-text">PROFESSIONAL</h6>
+                  <div class="line position-relative">
+                    <div class="small-circle position-absolute bg-white shadow">
+                      <img
+                        src="/assets/images/sky-blue-small-circle.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                  </div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">$4.99 per moth</p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 my-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">
+                        Profile customization & control
+                      </p>
+                    </div>
+                  </div>
+                  <div class="line"></div>
+                  <div class="d-flex gap-2 mt-2">
+                    <div class="white-small-circle shadow">
+                      <img
+                        src="/assets/images/tick.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                    <div>
+                      <p class="light-color m-0">Unlimited links</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="pb-5">
+                  <button
+                    class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
+                    type="button"
+                  >
+                    Pick the plan
+                  </button>
+                </div>
               </div>
             </div>
           </div>
