--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   </div>
                 </div>
                 <div class="d-grid gap-2 my-3 mx-3">
-                  <a href="./login.html">
+                  <a href="./assets/pages/login.html">
                     <button
                       class="btn w-100 bg-blue-color text-white py-2 rounded-pill shadow"
                       type="button"
@@ -282,7 +282,7 @@
                       Login
                     </button>
                   </a>
-                  <a href="./signup.html">
+                  <a href="./assets/pages/signup.html">
                     <button
                       class="btn w-100 bg-white py-2 rounded-pill shadow"
                       type="button"
