--- a/assets/pages/MonthlyPlan.html
+++ b/assets/pages/MonthlyPlan.html
@@ -166,12 +166,14 @@
                   </div>
                 </div>
                 <div class="pb-5">
-                  <button
-                    class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
-                    type="button"
-                  >
-                    Pick the plan
-                  </button>
+                  <a href="./Steppers.html">
+                    <button
+                      class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
+                      type="button"
+                    >
+                      Pick the plan
+                    </button>
+                  </a>
                 </div>
               </div>
               <div
@@ -283,12 +285,14 @@
                   </div>
                 </div>
                 <div class="pb-5">
-                  <button
-                    class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
-                    type="button"
-                  >
-                    Pick the plan
-                  </button>
+                  <a href="">
+                    <button
+                      class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
+                      type="button"
+                    >
+                      Pick the plan
+                    </button>
+                  </a>
                 </div>
               </div>
             </div>
