--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -45,13 +45,15 @@
                 placeholder="password  "
               />
             </div>
-            <div class="d-grid gap-2 my-3 mx-3 pt-5">
-              <button
-                class="btn bg-blue-color text-white py-3 rounded-pill shadow"
-                type="button"
-              >
-                Login
-              </button>
+            <div class="my-3 mx-3 pt-5">
+              <a href="/assets/pages/MonthlyPlan.html">
+                <button
+                  class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
+                  type="button"
+                >
+                  Login
+                </button>
+              </a>
             </div>
             <p class="text-center light-color">
               Did't have account
