--- a/assets/pages/SplashScreen.html
+++ b/assets/pages/SplashScreen.html
@@ -13,15 +13,13 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>LSVR - Splash Screen</title>
   </head>
   <body>
     <div class="splash_screen">
-      <div class="">
-        <img src="/assets/images/Logo.svg" alt="" />
-      </div>
+      <img src="/assets/images/Logo.svg" alt="" />
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
