--- a/index.html
+++ b/index.html
@@ -226,20 +226,27 @@
                         <img src="/assets/images/qr-code.png" alt="" />
                       </div>
                       <p class="text-center">or</p>
-                      <div class="input-group mb-3 position-relative">
-                        <input
-                          type="text"
-                          class="form-control rounded-pill py-3"
-                          placeholder="Link sharing with friends"
-                          aria-label="Recipient's username"
-                          aria-describedby="button-addon2"
-                        />
-                        <button
-                          class="position-absolute bg-dark text-white border-0 btn-share"
-                        >
-                          Share
-                        </button>
+                      <div
+                        class="d-flex bg-white px-2 align-items-center justify-content-between shadow rounded-pill"
+                      >
+                        <div>
+                          <input
+                            type="text"
+                            class="form-control border-0 py-3 rounded-pill"
+                            placeholder="Link sharing with friends"
+                          />
+                        </div>
+                        <div>
+                          <div class="">
+                            <button
+                              class="bg-dark d-flex justify-content-center align-items-center border-0 text-white btn-share"
+                            >
+                              Share
+                            </button>
+                          </div>
+                        </div>
                       </div>
+
                       <!------------------------------ Streamline Heading Section Started ---------------------->
 
                       <h5 class="blue-color text-center m-0 blue_heading pt-5">
@@ -275,7 +282,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="d-grid gap-2 my-3 mx-3">
+                <div class="d-grid gap-2 my-3 mx-3 pb-5">
                   <a href="./assets/pages/login.html">
                     <button
                       class="btn w-100 bg-blue-color text-white py-2 rounded-pill shadow"
