--- a/assets/pages/CongratulationsPage.html
+++ b/assets/pages/CongratulationsPage.html
@@ -12,63 +12,52 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
-    <title>Sign Up</title>
+    <title>Congratulation</title>
   </head>
   <body>
     <div class="container">
       <div class="row d-flex justify-content-center">
-        <div class="col-12 col-md-4 p-0">
-          <div class="home_bg px-4 py-3">
-            <div class="d-flex justify-content-center pt-5">
-              <img
-                src="/assets/images/sign-up-logo.png"
-                class="img-fluid pt-5"
-                alt=""
-              />
+        <div class="col-12 col-md-4">
+          <div class="home_bg pt-5">
+            <div class="mt-5 pt-5">
+              <p class="text-center light-color fs-5 fw-bold">Congr...</p>
+              <div class="card bg-white profile_card mx-4 shadow">
+                <div class="profile_pic d-flex justify-content-center">
+                  <img
+                    src="/assets/images/Congratulation-icon.svg"
+                    class="card-img-top"
+                    alt="Profile Image"
+                  />
+                </div>
+                <div class="card-body">
+                  <h5 class="card-title text-center m-0">
+                    Congratulation ! You
+                  </h5>
+                  <p class="card-text text-center m-0 light-color pb-3">
+                    LinkVault is now live ! Add it to your twitter, facebook,
+                    instagram, youtube, tiktok Bios or anywhere you want.
+                  </p>
+                </div>
+              </div>
             </div>
-            <h6 class="m-0 px-3">create your account</h6>
-            <p class="light-color px-3 lh-1">
-              chose your user name which can be changed any time
-            </p>
-            <div class="">
+            <div class="px-4 my-1">
               <input
                 type="text"
                 class="form-control rounded-pill py-3 px-4 shadow"
-                placeholder="lvsr.io User name "
-              />
-              <input
-                type="email"
-                class="form-control rounded-pill py-3 px-4 shadow"
-                placeholder="email for account creation "
-              />
-              <input
-                type="password"
-                class="form-control rounded-pill py-3 px-4 shadow"
-                placeholder="password for account "
+                placeholder="lvsr.io/#Dan Vittorni "
               />
             </div>
-            <div class="d-grid gap-2 my-3 mx-3 pt-5">
+            <div class="d-grid gap-2 my-2 px-4">
               <button
                 class="btn bg-blue-color text-white py-3 rounded-pill shadow"
                 type="button"
               >
-                Create Account
+                Continue
               </button>
             </div>
-            <p class="text-center light-color">
-              Already a user
-              <a href="./login.html" class="text-decoration-none text-dark"
-                >Sign in</a
-              >
-            </p>
-            <p class="text-center light-color">
-              By Pressing Continue you agree to our <br />
-              <a href="#" class="text-decoration-none text-dark"
-                >Term & Privacy</a
-              >
-            </p>
           </div>
         </div>
       </div>
