--- a/assets/pages/login.html
+++ b/assets/pages/login.html
@@ -17,7 +17,7 @@
     <title>Login</title>
   </head>
   <body>
-    <div class="container-fluid">
+    <div class="container">
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-md-4 p-0">
           <div class="home_bg px-4 py-3">
