--- a/assets/pages/ChangeBackground.html
+++ b/assets/pages/ChangeBackground.html
@@ -13,6 +13,13 @@
       crossorigin="anonymous"
     />
 
+    <!-- Scout Icon CDN -->
+
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
+    />
+
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Hello, world!</title>
@@ -92,7 +99,7 @@
                       tabindex="-1"
                       id="offcanvasBottom"
                       aria-labelledby="offcanvasBottomLabel"
-                      style="height: calc(100vh - 52vh)"
+                      style="height: calc(100vh - 26vh)"
                     >
                       <div class="offcanvas-header">
                         <h5
@@ -120,9 +127,14 @@
                             class="bg-circle bg-dark p-4 rounded-circle"
                           ></div>
                           <div
-                            class="bg-circle shadow bg-white p-2 rounded-circle position-relative"
+                            class="bg-circle shadow bg-white p-2 rounded-circle d-flex justify-content-center align-items-center position-relative"
                           >
                             Image
+                            <div
+                              class="position-absolute bg-dark text-white rounded-circle top-0 end-0"
+                            >
+                              pro
+                            </div>
                           </div>
                         </div>
                         <p class="text-center text-dark my-4">
@@ -174,6 +186,34 @@
                             </a>
                           </div>
                         </div>
+                        <div
+                          class="d-flex justify-content-between px-3 mt-3 py-3"
+                        >
+                          <div class="mt-5 pt-5">
+                            <img
+                              src="/assets/images/link.png"
+                              class="img-fluid"
+                              alt=""
+                            />
+                            <p class="light-color">My Links</p>
+                          </div>
+                          <div class="small-blue-circle mt-3">
+                            <img
+                              src="/assets/images/blend-tool.png"
+                              class="img-fluid bg-primary p-4 rounded-circle"
+                              alt=""
+                            />
+                            <p class="light-color">Appearance template</p>
+                          </div>
+                          <div class="mt-5 pt-5">
+                            <img
+                              src="/assets/images/analysis.png"
+                              class="img-fluid"
+                              alt=""
+                            />
+                            <p class="light-color">Analytic</p>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -192,7 +232,7 @@
       tabindex="-1"
       id="offcanvasBottom2"
       aria-labelledby="offcanvasBottomLabel"
-      style="height: calc(100vh - 52vh)"
+      style="height: calc(100vh - 22vh)"
     >
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasBottomLabel">
@@ -214,9 +254,14 @@
           ></div>
           <div class="bg-circle bg-dark p-4 rounded-circle"></div>
           <div
-            class="bg-circle shadow bg-white p-2 rounded-circle position-relative"
+            class="bg-circle shadow bg-white p-2 rounded-circle d-flex justify-content-center align-items-center position-relative"
           >
             Image
+            <div
+              class="position-absolute bg-dark text-white rounded-circle top-0 end-0"
+            >
+              pro
+            </div>
           </div>
         </div>
         <p class="text-center text-dark my-4">Button Style</p>
@@ -237,6 +282,24 @@
           <div class="p-3 border rounded-circle">Font</div>
           <div class="p-3 border rounded-circle">Font</div>
           <div class="p-3 border rounded-circle">Font</div>
+        </div>
+        <div class="d-flex justify-content-between px-3 mt-3 py-3">
+          <div class="mt-5 pt-5">
+            <img src="/assets/images/link.png" class="img-fluid" alt="" />
+            <p class="light-color">My Links</p>
+          </div>
+          <div class="small-blue-circle mt-3">
+            <img
+              src="/assets/images/blend-tool.png"
+              class="img-fluid bg-primary p-4 rounded-circle"
+              alt=""
+            />
+            <p class="light-color">Appearance template</p>
+          </div>
+          <div class="mt-5 pt-5">
+            <img src="/assets/images/analysis.png" class="img-fluid" alt="" />
+            <p class="light-color">Analytic</p>
+          </div>
         </div>
       </div>
     </div>
