--- a/assets/pages/ChangeBackground.html
+++ b/assets/pages/ChangeBackground.html
@@ -22,7 +22,7 @@
 
     <link rel="stylesheet" href="/assets/css/style.css" />
 
-    <title>Hello, world!</title>
+    <title>Change Background Screen</title>
   </head>
   <body>
     <div class="container">
