--- a/assets/pages/ChangeBackground.html
+++ b/assets/pages/ChangeBackground.html
@@ -30,6 +30,12 @@
         <div class="col-12 col-md-4 p-0">
           <div class="home_bg pt-5">
             <div class="pt-5">
+              <div class="">
+                <div>
+                  <img src="" alt="" />
+                </div>
+                <div></div>
+              </div>
               <div class="card bg-white profile_card mx-4 shadow">
                 <div class="profile_pic d-flex justify-content-center">
                   <img
@@ -39,7 +45,18 @@
                   />
                 </div>
                 <div class="card-body">
-                  <h5 class="card-title text-center m-0">Dan Vittorni</h5>
+                  <div class="d-flex justify-content-center gap-2">
+                    <div>
+                      <h5 class="card-title text-center m-0">Dan Vittorni</h5>
+                    </div>
+                    <div>
+                      <img
+                        src="/assets/images/edit-name.svg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </div>
+                  </div>
                   <p class="card-text text-center m-0">
                     Financial Advsor, Stockholm
                   </p>
