--- a/assets/pages/CongratulationsPage.html
+++ b/assets/pages/CongratulationsPage.html
@@ -18,7 +18,7 @@
     <title>Congratulation</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container p-0">
       <div class="row d-flex justify-content-center">
         <div class="col-12 col-md-4">
           <div class="home_bg pt-5">
@@ -51,12 +51,14 @@
               />
             </div>
             <div class="d-grid gap-2 my-2 px-4">
-              <button
-                class="btn bg-blue-color text-white py-3 rounded-pill shadow"
-                type="button"
-              >
-                Continue
-              </button>
+              <a href="/assets/pages/ChangeBackground.html">
+                <button
+                  class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
+                  type="button"
+                >
+                  Continue
+                </button>
+              </a>
             </div>
           </div>
         </div>
