--- a/assets/pages/Steppers.html
+++ b/assets/pages/Steppers.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bootstrap Horizontal Stepper</title>
+    <title>Stepper</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -232,7 +232,7 @@
                         Designer
                       </p>
                     </div>
-                    <a href="./thank-you.html">
+                    <a href="./CongratulationsPage.html">
                       <button
                         class="btn w-100 mb-5 bg-blue-color text-white py-2 rounded-pill shadow"
                         type="button"
