--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJ" />
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJ"
+    />
     <!DOCTYPE html>
     <html lang="en">
       <head>
@@ -22,7 +23,8 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
           rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-          crossorigin="anonymous" />
+          crossorigin="anonymous"
+        />
 
         <!-------------- OWL -------------->
         <link
@@ -30,13 +32,15 @@
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
           integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
           crossorigin="anonymous"
-          referrerpolicy="no-referrer" />
+          referrerpolicy="no-referrer"
+        />
         <link
           rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
           integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
           crossorigin="anonymous"
-          referrerpolicy="no-referrer" />
+          referrerpolicy="no-referrer"
+        />
 
         <link rel="stylesheet" href="/assets/css/style.css" />
 
@@ -56,7 +60,8 @@
                           <img
                             src="/assets/images/Profile_Pic.png"
                             class="card-img-top"
-                            alt="Profile Image" />
+                            alt="Profile Image"
+                          />
                         </div>
                         <div class="card-body">
                           <h5 class="card-title text-center m-0">
@@ -67,30 +72,35 @@
                           </p>
 
                           <div
-                            class="social-links d-flex justify-content-center gap-2">
+                            class="social-links d-flex justify-content-center gap-2"
+                          >
                             <a href="#">
                               <img
                                 src="/assets/images/instagram-logo.svg"
                                 class="ig-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </a>
                             <a href="#">
                               <img
                                 src="/assets/images/twitter-logo.svg"
                                 class="ig-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </a>
                             <a href="#">
                               <img
                                 src="/assets/images/facebook-logo.svg"
                                 class="ig-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </a>
                             <a href="#">
                               <img
                                 src="/assets/images/linkeidn-logo.svg"
                                 class="ig-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </a>
                           </div>
                         </div>
@@ -108,7 +118,8 @@
                               <img
                                 src="/assets/images/globe-icon.svg"
                                 class="img-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </div>
                             <div>
                               <a
@@ -123,7 +134,8 @@
                               <img
                                 src="/assets/images/email-icon.svg"
                                 class="img-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </div>
                             <div>
                               <a
@@ -138,7 +150,8 @@
                               <img
                                 src="/assets/images/map-marker-icon.svg"
                                 class="img-fluid"
-                                alt="" />
+                                alt=""
+                              />
                             </div>
                             <div>
                               <a
@@ -192,7 +205,8 @@
                         <input
                           type="text"
                           class="rounded-pill form-control text-center py-3 shadow"
-                          placeholder="lvsr.io/#Dan Vittorni" />
+                          placeholder="lvsr.io/#Dan Vittorni"
+                        />
                       </div>
                       <!------------------------------ Streamline Heading Section Started ---------------------->
 
@@ -213,17 +227,20 @@
                       </div>
                       <p class="text-center">or</p>
                       <div
-                        class="d-flex bg-white px-2 align-items-center justify-content-between shadow rounded-pill">
+                        class="d-flex bg-white px-2 align-items-center justify-content-between shadow rounded-pill"
+                      >
                         <div>
                           <input
                             type="text"
                             class="form-control border-0 py-3 rounded-pill"
-                            placeholder="Link sharing with friends" />
+                            placeholder="Link sharing with friends"
+                          />
                         </div>
                         <div>
                           <div class="">
                             <button
-                              class="bg-dark d-flex justify-content-center align-items-center border-0 text-white btn-share">
+                              class="bg-dark d-flex justify-content-center align-items-center border-0 text-white btn-share"
+                            >
                               Share
                             </button>
                           </div>
@@ -248,7 +265,8 @@
                         <img
                           src="/assets/images/MoneyIcon .png"
                           class="img-fluid"
-                          alt="" />
+                          alt=""
+                        />
                       </div>
 
                       <!------------------------------ Streamline Heading Section Started ---------------------->
@@ -268,21 +286,23 @@
                   <a href="./assets/pages/login.html">
                     <button
                       class="btn w-100 bg-blue-color text-white py-2 rounded-pill shadow"
-                      type="button">
+                      type="button"
+                    >
                       Login
                     </button>
                   </a>
                   <a href="./assets/pages/signup.html">
                     <button
                       class="btn w-100 bg-white py-2 rounded-pill shadow"
-                      type="button">
+                      type="button"
+                    >
                       Sign up
                     </button>
                   </a>
                 </div>
 
                 <!-- Splash Screen -->
-                <div id="splash">
+                <!-- <div id="splash">
                   <div class="splash_screen">
                     <img src="/assets/images/Logo.svg" alt="" />
                   </div>
@@ -301,7 +321,6 @@
                     transition: opacity 1s;
                     top: 0;
                     left: 0;
-                    z-index: 9999999;
                   }
                   #splash.fade {
                     opacity: 0;
@@ -310,8 +329,8 @@
                 <script>
                   setTimeout(() => {
                     document.getElementById("splash").classList.toggle("fade");
-                  }, 3000);
-                </script>
+                  }, 1000);
+                </script> -->
 
                 <!-- Splash Screen End -->
               </div>
@@ -325,18 +344,21 @@
         <script
           src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
           integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-          crossorigin="anonymous"></script>
+          crossorigin="anonymous"
+        ></script>
         <!---------------- OWL -------------->
         <script
           src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
           integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
           crossorigin="anonymous"
-          referrerpolicy="no-referrer"></script>
+          referrerpolicy="no-referrer"
+        ></script>
         <script
           src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
           integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
           crossorigin="anonymous"
-          referrerpolicy="no-referrer"></script>
+          referrerpolicy="no-referrer"
+        ></script>
         <script>
           $(".owl-carousel").owlCarousel({
             loop: false,
