--- a/assets/pages/CongratulationsPage.html
+++ b/assets/pages/CongratulationsPage.html
@@ -51,7 +51,7 @@
               />
             </div>
             <div class="d-grid gap-2 my-2 px-4">
-              <a href="/assets/pages/ChangeBackground.html">
+              <a href="/assets/pages/AddLinks.html">
                 <button
                   class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
                   type="button"
