--- a/assets/pages/AddLinks.html
+++ b/assets/pages/AddLinks.html
@@ -248,126 +248,74 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+          <!----------------------------------------------- Footer ------------------------------------------------->
 
-              <!-- Bottom Tabs -->
-              <div class="mx-3 d-flex justify-content-center">
-                <ul class="nav nav-tabs" id="myTab" role="tablist">
-                  <li class="nav-item" role="presentation">
-                    <button
-                      class="nav-link active"
-                      id="home-tab"
-                      data-bs-toggle="tab"
-                      data-bs-target="#home"
-                      type="button"
-                      role="tab"
-                      aria-controls="home"
-                      aria-selected="true"
-                    >
-                      <img
-                        src="/assets/images/link-tab.svg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <p>Links</p>
-                    </button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button
-                      class="nav-link"
-                      id="profile-tab"
-                      data-bs-toggle="tab"
-                      data-bs-target="#profile"
-                      type="button"
-                      role="tab"
-                      aria-controls="profile"
-                      aria-selected="false"
-                    >
-                      <img
-                        src="/assets/images/visual-tab.svg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <p>Visuals</p>
-                    </button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button
-                      class="nav-link"
-                      id="contact-tab"
-                      data-bs-toggle="tab"
-                      data-bs-target="#contact"
-                      type="button"
-                      role="tab"
-                      aria-controls="contact"
-                      aria-selected="false"
-                    >
-                      <img
-                        src="/assets/images/insight-tab.svg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <p>Insights</p>
-                    </button>
-                  </li>
-                  <li class="nav-item" role="presentation">
-                    <button
-                      class="nav-link"
-                      id="forth-tab"
-                      data-bs-toggle="tab"
-                      data-bs-target="#forth"
-                      type="button"
-                      role="tab"
-                      aria-controls="forth"
-                      aria-selected="false"
-                    >
-                      <img
-                        src="/assets/images/more-tab.svg"
-                        class="img-fluid"
-                        alt=""
-                      />
-                      <p>More</p>
-                    </button>
-                  </li>
-                </ul>
+          <footer class="shadow-lg mt-3">
+            <div class="row d-flex justify-content-center pt-3">
+              <div class="col-3">
+                <div class="text-center">
+                  <a
+                    href="/assets/pages/AddLinks.html"
+                    class="text-decoration-none"
+                  >
+                    <img
+                      src="/assets/images/link-tab.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <p class="light-color">Links</p>
+                  </a>
+                </div>
               </div>
-              <div class="mx-3">
-                <div class="tab-content" id="myTabContent">
-                  <div
-                    class="tab-pane fade show active"
-                    id="home"
-                    role="tabpanel"
-                    aria-labelledby="home-tab"
+              <div class="col-3">
+                <div class="text-center">
+                  <a
+                    href="/assets/pages/ChangeBackground.html"
+                    class="text-decoration-none"
                   >
-                    ...
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="profile"
-                    role="tabpanel"
-                    aria-labelledby="profile-tab"
+                    <img
+                      src="/assets/images/visual-tab.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <p class="light-color">Visuals</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="text-center">
+                  <a
+                    href="/assets/pages/insight.html"
+                    class="text-decoration-none"
                   >
-                    ...
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="contact"
-                    role="tabpanel"
-                    aria-labelledby="contact-tab"
+                    <img
+                      src="/assets/images/insight-tab.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <p class="light-color">Insights</p>
+                  </a>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="text-center">
+                  <a
+                    href="/assets/pages/More.html"
+                    class="text-decoration-none"
                   >
-                    ...
-                  </div>
-                  <div
-                    class="tab-pane fade"
-                    id="forth"
-                    role="tabpanel"
-                    aria-labelledby="forth-tab"
-                  >
-                    Four
-                  </div>
+                    <img
+                      src="/assets/images/more-tab.svg"
+                      class="img-fluid"
+                      alt=""
+                    />
+                    <p class="light-color">More</p>
+                  </a>
                 </div>
               </div>
             </div>
-          </div>
+          </footer>
         </div>
       </div>
     </div>
