--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -136,7 +136,7 @@
                 <p class="blue-color px-5 m-0 py-2">Assistance</p>
                 <div class="">
                   <a
-                    href="#"
+                    href="./ShareYourLink.html"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
                   >
                     <div class="d-flex">
