--- a/assets/pages/insight.html
+++ b/assets/pages/insight.html
@@ -109,7 +109,7 @@
         </div>
         <!----------------------------------------------- Footer ------------------------------------------------->
 
-        <footer class="shadow-lg mt-3">
+        <footer class="shadow-lg mt-3 position-fixed bottom-0">
           <div class="row d-flex justify-content-center pt-3">
             <div class="col-3">
               <div class="text-center">
