--- a/assets/pages/insight.html
+++ b/assets/pages/insight.html
@@ -64,13 +64,13 @@
               </div>
             </div>
 
-            <div class="card bg-white profile_card pb-5 mx-4 shadow my-3">
+            <div class="card bg-white profile_card pb-2 mx-4 shadow my-3">
               <div class="card-body">
                 <div class="accordion border-0" id="accordionExample">
                   <div class="accordion-item border-0">
                     <h2 class="accordion-header" id="headingOne">
                       <button
-                        class="accordion-button text-center rounded-pill border mb-5"
+                        class="accordion-button text-center rounded-pill border"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target="#collapseOne"
@@ -93,12 +93,7 @@
                         It is shown by default, until the collapse plugin adds
                         the appropriate classes that we use to style each
                         element. These classes control the overall appearance,
-                        as well as the showing and hiding via CSS transitions.
-                        You can modify any of this with custom CSS or overriding
-                        our default variables. It's also worth noting that just
-                        about any HTML can go within the
-                        <code>.accordion-body</code>, though the transition does
-                        limit overflow.
+                        as well
                       </div>
                     </div>
                   </div>
