--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -40,7 +40,11 @@
 
               <div class="">
                 <p class="blue-color px-5 m-0 pb-2">Profile Settings</p>
-                <div class="">
+                <div
+                  class=""
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModal"
+                >
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -62,7 +66,11 @@
                     </div>
                   </a>
                 </div>
-                <div class="">
+                <div
+                  class=""
+                  data-bs-toggle="modal"
+                  data-bs-target="#changepassword"
+                >
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -386,6 +394,141 @@
               </div>
             </div>
           </footer>
+        </div>
+      </div>
+    </div>
+
+    <!-- Account Information Modal -->
+    <div
+      class="modal fade"
+      id="exampleModal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body w-100">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/More.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+
+              <h6 class="m-0">Account Information</h6>
+            </div>
+            <div class="">
+              <input
+                type="text"
+                class="form-control rounded-pill py-3 px-4 shadow"
+                placeholder="lvsr.io User name "
+              />
+              <input
+                type="email"
+                class="form-control rounded-pill py-3 px-4 shadow"
+                placeholder="email for account creation "
+              />
+              <input
+                type="password"
+                class="form-control rounded-pill py-3 px-4 shadow"
+                placeholder="password for account "
+              />
+            </div>
+
+            <div class="d-flex my-2 gap-5 justify-content-between">
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-dark px-4 shadow py-2 rounded-pill text-white border-0"
+                  >
+                    Back
+                  </button>
+                </a>
+              </div>
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-blue-color shadow px-3 py-2 rounded-pill text-white border-0"
+                  >
+                    Save Changes
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Account Information Modal -->
+    <div
+      class="modal fade"
+      id="changepassword"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body w-100">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/More.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+
+              <h6 class="m-0">Change Password</h6>
+            </div>
+            <div class="">
+              <input
+                type="password"
+                class="form-control rounded-pill py-3 px-4 shadow"
+                placeholder="Current Password"
+              />
+              <input
+                type="password"
+                class="form-control rounded-pill py-3 px-4 shadow"
+                placeholder="New Password"
+              />
+              <input
+                type="password"
+                class="form-control rounded-pill py-3 px-4 shadow"
+                placeholder="Change new Password"
+              />
+            </div>
+            <p class="text-center light-color pt-2">
+              Length : 6 to 8 characters long Complexity: Include a combination
+              of upper case, lower case, number and atleast one special
+              character.
+            </p>
+
+            <div class="d-flex my-2 gap-5 justify-content-between">
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-dark px-4 shadow py-2 rounded-pill text-white border-0"
+                  >
+                    Back
+                  </button>
+                </a>
+              </div>
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-blue-color shadow px-3 py-2 rounded-pill text-white border-0"
+                  >
+                    Save Changes
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
