--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -362,7 +362,7 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+        <div class="modal-content plan-card-border">
           <div class="modal-body w-100">
             <div>
               <div class="d-flex align-items-center justify-content-center">
