--- a/assets/pages/AddLinks.html
+++ b/assets/pages/AddLinks.html
@@ -30,12 +30,6 @@
         <div class="col-12 col-md-4 p-0">
           <div class="pt-5">
             <div class="pt-5">
-              <div class="">
-                <div>
-                  <img src="" alt="" />
-                </div>
-                <div></div>
-              </div>
               <div class="card bg-white profile_card mx-4 shadow-sm">
                 <div class="profile_pic d-flex justify-content-center">
                   <img
@@ -250,75 +244,59 @@
               </div>
             </div>
           </div>
-          <!----------------------------------------------- Footer ------------------------------------------------->
 
-          <footer class="shadow-lg mt-3">
-            <div class="row d-flex justify-content-center pt-3">
-              <div class="col-3">
-                <div class="text-center">
-                  <a
-                    href="/assets/pages/AddLinks.html"
-                    class="text-decoration-none"
-                  >
-                    <img
-                      src="/assets/images/link-tab.svg"
-                      class="img-fluid"
-                      alt=""
-                    />
-                    <p class="light-color">Links</p>
-                  </a>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="text-center">
-                  <a
-                    href="/assets/pages/ChangeBackground.html"
-                    class="text-decoration-none"
-                  >
-                    <img
-                      src="/assets/images/visual-tab.svg"
-                      class="img-fluid"
-                      alt=""
-                    />
-                    <p class="light-color">Visuals</p>
-                  </a>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="text-center">
-                  <a
-                    href="/assets/pages/insight.html"
-                    class="text-decoration-none"
-                  >
-                    <img
-                      src="/assets/images/insight-tab.svg"
-                      class="img-fluid"
-                      alt=""
-                    />
-                    <p class="light-color">Insights</p>
-                  </a>
-                </div>
-              </div>
-              <div class="col-3">
-                <div class="text-center">
-                  <a
-                    href="/assets/pages/More.html"
-                    class="text-decoration-none"
-                  >
-                    <img
-                      src="/assets/images/more-tab.svg"
-                      class="img-fluid"
-                      alt=""
-                    />
-                    <p class="light-color">More</p>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </footer>
+          <!----------------------------------------------- Footer ------------------------------------------------->
         </div>
       </div>
     </div>
+
+    <footer class="shadow-lg mt-3">
+      <div class="row d-flex justify-content-center pt-3">
+        <div class="col-3">
+          <div class="text-center">
+            <a href="/assets/pages/AddLinks.html" class="text-decoration-none">
+              <img src="/assets/images/link-tab.svg" class="img-fluid" alt="" />
+              <p class="light-color">Links</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="text-center">
+            <a
+              href="/assets/pages/ChangeBackground.html"
+              class="text-decoration-none"
+            >
+              <img
+                src="/assets/images/visual-tab.svg"
+                class="img-fluid"
+                alt=""
+              />
+              <p class="light-color">Visuals</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="text-center">
+            <a href="/assets/pages/insight.html" class="text-decoration-none">
+              <img
+                src="/assets/images/insight-tab.svg"
+                class="img-fluid"
+                alt=""
+              />
+              <p class="light-color">Insights</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="text-center">
+            <a href="/assets/pages/AddLinks.html" class="text-decoration-none">
+              <img src="/assets/images/more-tab.svg" class="img-fluid" alt="" />
+              <p class="light-color">More</p>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
