--- a/assets/pages/MonthlyPlan.html
+++ b/assets/pages/MonthlyPlan.html
@@ -285,7 +285,7 @@
                   </div>
                 </div>
                 <div class="pb-5">
-                  <a href="">
+                  <a href="/assets/pages/Steppers.html">
                     <button
                       class="btn w-100 bg-blue-color text-white py-3 rounded-pill shadow"
                       type="button"
