--- a/assets/pages/More.html
+++ b/assets/pages/More.html
@@ -20,8 +20,8 @@
   <body>
     <div class="container">
       <div class="row d-flex justify-content-center">
-        <div class="col-md-4 col-12 my-5">
-          <div class="card bg-white profile_card border-2 my-4">
+        <div class="col-md-4 col-12 mt-5">
+          <div class="card bg-white profile_card border-2 mt-4">
             <div class="card-body">
               <div class="d-flex gap-1 justify-content-end align-items-center">
                 <div>
@@ -92,7 +92,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="">
+                <div data-bs-toggle="modal" data-bs-target="#exampleModalsubsc">
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -114,7 +114,10 @@
                     </div>
                   </a>
                 </div>
-                <div class="">
+                <div
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModalLanguage"
+                >
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -186,7 +189,7 @@
                     </div>
                   </a>
                 </div>
-                <div class="">
+                <div data-bs-toggle="modal" data-bs-target="#exampleModalAsk">
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -208,7 +211,10 @@
                     </div>
                   </a>
                 </div>
-                <div class="">
+                <div
+                  data-bs-toggle="modal"
+                  data-bs-target="#exampleModalContact"
+                >
                   <a
                     href="#"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
@@ -282,7 +288,7 @@
                 </div>
                 <div class="">
                   <a
-                    href="#"
+                    href="/assets/pages/login.html"
                     class="text-decoration-none px-2 py-2 d-flex justify-content-between align-items-center"
                   >
                     <div class="d-flex">
@@ -328,9 +334,9 @@
             </div>
           </div>
 
-          <!----------------------------------------------- Footer ------------------------------------------------->
+          <!----------------------------------------------- Footer ------------------------------------------->
 
-          <footer class="shadow-lg mt-3">
+          <footer class="shadow-lg mt-4">
             <div class="row d-flex justify-content-center pt-3">
               <div class="col-3">
                 <div class="text-center">
@@ -398,7 +404,8 @@
       </div>
     </div>
 
-    <!-- Account Information Modal -->
+    <!------------------------------------------- Account Information Modal --------------------------------->
+
     <div
       class="modal fade"
       id="exampleModal"
@@ -407,8 +414,8 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-body w-100">
+        <div class="modal-content modal-border">
+          <div class="modal-body">
             <div class="d-flex align-items-center justify-content-center py-4">
               <a href="/assets/pages/More.html" class="pe-5">
                 <img
@@ -438,11 +445,11 @@
               />
             </div>
 
-            <div class="d-flex my-2 gap-5 justify-content-between">
+            <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
               <div>
                 <a href="./More.html">
                   <button
-                    class="bg-dark px-4 shadow py-2 rounded-pill text-white border-0"
+                    class="bg-dark px-5 shadow py-3 rounded-pill text-white border-0"
                   >
                     Back
                   </button>
@@ -451,7 +458,7 @@
               <div>
                 <a href="./More.html">
                   <button
-                    class="bg-blue-color shadow px-3 py-2 rounded-pill text-white border-0"
+                    class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
                   >
                     Save Changes
                   </button>
@@ -463,7 +470,8 @@
       </div>
     </div>
 
-    <!-- Account Information Modal -->
+    <!----------------------------------------------- Change Password Modal --------------------------------->
+
     <div
       class="modal fade"
       id="changepassword"
@@ -472,8 +480,8 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-body w-100">
+        <div class="modal-content modal-border">
+          <div class="modal-body">
             <div class="d-flex align-items-center justify-content-center py-4">
               <a href="/assets/pages/More.html" class="pe-5">
                 <img
@@ -508,11 +516,11 @@
               character.
             </p>
 
-            <div class="d-flex my-2 gap-5 justify-content-between">
+            <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
               <div>
                 <a href="./More.html">
                   <button
-                    class="bg-dark px-4 shadow py-2 rounded-pill text-white border-0"
+                    class="bg-dark px-5 shadow py-3 rounded-pill text-white border-0"
                   >
                     Back
                   </button>
@@ -521,12 +529,372 @@
               <div>
                 <a href="./More.html">
                   <button
-                    class="bg-blue-color shadow px-3 py-2 rounded-pill text-white border-0"
+                    class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
                   >
                     Save Changes
                   </button>
                 </a>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!----------------------------------------------- Subscription Modal ------------------------------------->
+
+    <div
+      class="modal fade"
+      id="exampleModalsubsc"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-border">
+          <div class="modal-body w-100">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/More.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+
+              <h6 class="m-0">Subscription settings</h6>
+            </div>
+            <div class="card p-4 shadow plan-card-border">
+              <h6 class="free-text">FREE</h6>
+              <div class="line position-relative">
+                <div class="small-circle position-absolute bg-white shadow">
+                  <img
+                    src="/assets/images/blue-small-circle.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="d-flex gap-2 my-2">
+                <div class="white-small-circle shadow">
+                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                </div>
+                <div>
+                  <p class="light-color m-0">Limited links</p>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="d-flex gap-2 my-2">
+                <div class="white-small-circle shadow">
+                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                </div>
+                <div>
+                  <p class="light-color m-0">Pree selected backgrounds</p>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="d-flex gap-2 mt-2">
+                <div class="white-small-circle shadow">
+                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                </div>
+                <div>
+                  <p class="light-color m-0">Pree selected button colors</p>
+                </div>
+              </div>
+            </div>
+            <div class="card p-4 my-3 shadow plan-card-border">
+              <h6 class="free-text">PROFESSIONAL</h6>
+              <div class="line position-relative">
+                <div class="small-circle position-absolute bg-white shadow">
+                  <img
+                    src="/assets/images/sky-blue-small-circle.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+              </div>
+              <div class="d-flex gap-2 my-2">
+                <div class="white-small-circle shadow">
+                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                </div>
+                <div>
+                  <p class="light-color m-0">$4.99 per moth</p>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="d-flex gap-2 my-2">
+                <div class="white-small-circle shadow">
+                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                </div>
+                <div>
+                  <p class="light-color m-0">Profile customization & control</p>
+                </div>
+              </div>
+              <div class="line"></div>
+              <div class="d-flex gap-2 mt-2">
+                <div class="white-small-circle shadow">
+                  <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+                </div>
+                <div>
+                  <p class="light-color m-0">Unlimited links</p>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-dark px-5 shadow py-3 rounded-pill text-white border-0"
+                  >
+                    Back
+                  </button>
+                </a>
+              </div>
+              <div>
+                <a href="./More.html">
+                  <button
+                    class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
+                  >
+                    Save Changes
+                  </button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!------------------------------------------ Language Modal --------------------------------------------->
+
+    <div
+      class="modal fade"
+      id="exampleModalLanguage"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-border">
+          <div class="modal-body">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/More.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+
+              <h6 class="m-0">Language</h6>
+            </div>
+            <div class="d-flex gap-2 my-2 mx-3">
+              <div class="white-small-circle shadow">
+                <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+              </div>
+              <div>
+                <p class="light-color m-0">English</p>
+              </div>
+            </div>
+            <div class="d-flex gap-2 my-3 mx-3">
+              <div class="white-small-circle shadow">
+                <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+              </div>
+              <div>
+                <p class="light-color m-0">French</p>
+              </div>
+            </div>
+            <div class="d-flex gap-2 my-2 mx-3">
+              <div class="white-small-circle shadow">
+                <img src="/assets/images/tick.svg" class="img-fluid" alt="" />
+              </div>
+              <div>
+                <p class="light-color m-0">Spanish</p>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
+            <div>
+              <a href="./More.html">
+                <button
+                  class="bg-dark px-5 shadow py-3 rounded-pill text-white border-0"
+                >
+                  Back
+                </button>
+              </a>
+            </div>
+            <div>
+              <a href="./More.html">
+                <button
+                  class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
+                >
+                  Save Changes
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!----------------------------------------- Ask a Question Modal ----------------------------------------->
+
+    <div
+      class="modal fade"
+      id="exampleModalAsk"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-border">
+          <div class="modal-body">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/More.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+              <h6 class="m-0">Ask a Question</h6>
+            </div>
+            <p class="light-color px-3">
+              Send inquiries to over team of expert admins who are here to help.
+              Anticipate hearing back from our team within 24-72 hours after
+              submitting your questions/concerns.
+            </p>
+          </div>
+          <div class="mx-3">
+            <textarea
+              name=""
+              class="form-control shadow plan-card-border p-4 light-color"
+              id=""
+              cols="30"
+              rows="5"
+              placeholder="User text massage"
+            ></textarea>
+          </div>
+          <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
+            <div>
+              <a href="./More.html">
+                <button
+                  class="bg-dark px-5 shadow py-3 rounded-pill text-white border-0"
+                >
+                  Back
+                </button>
+              </a>
+            </div>
+            <div>
+              <a href="./More.html">
+                <button
+                  class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
+                >
+                  Save Changes
+                </button>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!------------------------------------------ Contact Us Modal ------------------------------------------->
+
+    <div
+      class="modal fade"
+      id="exampleModalContact"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-border">
+          <div class="modal-body">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/More.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+              <h6 class="m-0">Contact US</h6>
+            </div>
+            <div class="px-4">
+              <p><span class="light-color">Emaill:</span>info@lsvr.io</p>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <p class="light-color">Instagram:</p>
+                </div>
+                <div>
+                  <button class="rounded-pill border-1 px-3 bg-transparent">
+                    Follow
+                  </button>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <p class="light-color">Twitter:</p>
+                </div>
+                <div>
+                  <button
+                    class="rounded-pill border-1 border px-3 bg-transparent"
+                  >
+                    Follow
+                  </button>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <p class="light-color">Youtube:</p>
+                </div>
+                <div>
+                  <button class="rounded-pill border-1 px-3 bg-transparent">
+                    Follow
+                  </button>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <p class="light-color">Discord:</p>
+                </div>
+                <div>
+                  <button class="rounded-pill border-1 px-3 bg-transparent">
+                    Follow
+                  </button>
+                </div>
+              </div>
+              <div class="d-flex justify-content-between">
+                <div>
+                  <p class="light-color">Tiktok:</p>
+                </div>
+                <div>
+                  <button class="rounded-pill border-1 px-3 bg-transparent">
+                    Follow
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex my-4 mx-4 gap-2 justify-content-between">
+            <div>
+              <a href="./More.html">
+                <button
+                  class="bg-dark px-5 shadow py-3 rounded-pill text-white border-0"
+                >
+                  Back
+                </button>
+              </a>
+            </div>
+            <div>
+              <a href="./More.html">
+                <button
+                  class="bg-blue-color shadow px-3 py-3 rounded-pill text-white border-0"
+                >
+                  Save Changes
+                </button>
+              </a>
             </div>
           </div>
         </div>
