--- a/assets/pages/ShareYourLink.html
+++ b/assets/pages/ShareYourLink.html
@@ -38,7 +38,12 @@
               </a>
             </div>
           </div>
-          <div class="my-1">
+          <div
+            class="my-1"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#offcanvasBottom"
+            aria-controls="offcanvasBottom"
+          >
             <div class="bg-blue-color rounded-pill py-3 mx-3">
               <a href="#" class="text-decoration-none">
                 <div class="">
@@ -197,7 +202,7 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+        <div class="modal-content modal-border">
           <div class="modal-body">
             <div>
               <div
@@ -243,7 +248,8 @@
       </div>
     </div>
 
-    <!-- Modal -->
+    <!------------------------------------------------ Chip Modal ------------------------------------------->
+
     <div
       class="modal fade"
       id="staticBackdrop2"
@@ -254,7 +260,7 @@
       aria-hidden="true"
     >
       <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
+        <div class="modal-content modal-border">
           <div class="modal-body">
             <div>
               <div
@@ -290,6 +296,148 @@
                     Write to NFC chip
                   </button>
                 </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Sharing Link to Others Off Canvas -->
+
+    <div class="row">
+      <div class="col-12 col-md-4">
+        <div
+          class="offcanvas offcanvas-bottom"
+          tabindex="-1"
+          id="offcanvasBottom"
+          aria-labelledby="offcanvasBottomLabel"
+        >
+          <div class="offcanvas-body small">
+            <div class="d-flex align-items-center justify-content-center py-4">
+              <a href="/assets/pages/ShareYourLink.html" class="pe-5">
+                <img
+                  src="/assets/images/less-than-arrow.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </a>
+
+              <h6 class="m-0">Share my link to</h6>
+            </div>
+            <div
+              class="d-flex justify-content-between align-items-center mb-3 border border-dark px-3 py-2 rounded-pill"
+            >
+              <div class="border border-1 p-1 rounded-circle">
+                <img
+                  src="/assets/images/cross.svg"
+                  class="img-fluid p-1"
+                  alt=""
+                />
+              </div>
+              <div class="share-link-picture">
+                <img
+                  src="/assets/images/Profile_Pic.png"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div>
+                <h6 class="m-0">Dan Vittorni</h6>
+                <p class="m-0">lvsr.io/#Dan Vittorni</p>
+              </div>
+              <div>
+                <img
+                  src="/assets/images/green-tick-mark.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                <div class="share-to-people">
+                  <img
+                    src="/assets/images/sharing-people.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <p class="text-center text-dark py-1">Dan Vittorni</p>
+              </div>
+              <div class="col-4">
+                <div class="share-to-people">
+                  <img
+                    src="/assets/images/sharing-people-2.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <p class="text-center text-dark py-1">Dan Vittorni</p>
+              </div>
+              <div class="col-4">
+                <div class="share-to-people">
+                  <img
+                    src="/assets/images/sharing-people-3.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                </div>
+                <p class="text-center text-dark py-1">Dan Vittorni</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-3">
+                <div class="">
+                  <img
+                    src="/assets/images/airdrop.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <p class="text-center">Airdrop</p>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="">
+                  <img
+                    src="/assets/images/message-circle.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <p class="text-center">Message</p>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="">
+                  <img src="/assets/images/mail.svg" class="img-fluid" alt="" />
+                  <p class="text-center">Mail</p>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="">
+                  <img
+                    src="/assets/images/instagram.svg"
+                    class="img-fluid"
+                    alt=""
+                  />
+                  <p class="text-center">Instagram</p>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-between my-4 px-2">
+              <div>
+                <button
+                  class="border-1 border px-3 rounded-pill bg-transparent"
+                >
+                  Copy
+                </button>
+              </div>
+              <div>
+                <img
+                  src="/assets/images/copy-icon.svg"
+                  class="img-fluid"
+                  alt=""
+                />
               </div>
             </div>
           </div>
