--- a/assets/pages/AddLinkToShare.html
+++ b/assets/pages/AddLinkToShare.html
@@ -95,7 +95,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
@@ -127,7 +129,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
@@ -159,7 +163,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
@@ -187,7 +193,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
@@ -215,7 +223,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
@@ -243,7 +253,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
@@ -275,7 +287,9 @@
               </div>
               <div>
                 <a href="#">
-                  <button class="bg-dark rounded-pill text-white px-2">
+                  <button
+                    class="bg-dark border border-1 rounded-pill text-white px-2"
+                  >
                     Add
                   </button>
                 </a>
